# lxqt-core

./: README.md
doc/requirements/: list
src/: CMakeLists.txt
src/lxqt-core/: CMakeLists.txt  Core.cpp  Core.h  LxqtModuleInterface.h  ModuleDescriptor.cpp  ModuleDescriptor.h  ModuleFactory.cpp  ModuleFactory.h  lxqt-core-config.h.in  main.cpp
src/lxqt-modules/: CMakeLists.txt  DESCRIPTION.txt
src/lxqt-modules/LxqtMod_CoreConfig/: CMakeLists.txt  Descriptor.desktop.in  LxqtMod_CoreConfig.cpp  LxqtMod_CoreConfig.h  basicsettings.cpp  basicsettings.h  basicsettings.ui  modulemodel.cpp  modulemodel.h
src/lxqt-modules/default/: CMakeLists.txt  Descriptor.desktop.in  LxqtMod_Default.cpp  LxqtMod_Default.h
